# aws-data-engineering

./: .gitignore  README.md
lambda-collector/: Dockerfile  Makefile  app.py  lambda_handler.py  pyproject.toml
lambda-collector/lambda_collector/: Constants.py  Utils.py
lambda-collector/lambda_collector/data/: Connector.py  ConnectorInterface.py  DataExtractor.py
lambda-collector/lambda_collector/search/: Searcher.py
lambda-collector/lambda_operational_search/: Searcher.py
lambda-collector/scripts/: build.sh  create-function.sh  delete-function.sh  deploy-refresh-token.sh  deploy.sh  destroy.sh  docker-event.sh  docker-local.sh  undeploy.sh
lambda-collector/tests/: ConnectorMock.py  DataExtractorTest.py  SearcherTest.py  TestUtils.py  test_lambda_collector.py
lambda-collector/tests/datasets/: dynamo.csv  dynamo_search.csv  s3.csv  sample.csv
refs/: params.csv  stations.csv
